--- a/telegram_dbt_project/dbt_project.yml
+++ b/telegram_dbt_project/dbt_project.yml
@@ -29,8 +29,17 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+#models:
+  #telegram_dbt_project:
+    # Config indicated by + and applies to all files under models/example/
+   # example:
+    #  +materialized: view
+     # +schema: analytics
+
 models:
   telegram_dbt_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    +schema: analytics
+    staging:
       +materialized: view
+    marts:
+      +materialized: table
